# CG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  engine.cpp  generator.cpp  test.xml  test_1_2.xml  text.xml
demos/: alignedSolarSystem.xml  solarSystem.xml
fase1/: CMakeLists.txt  example.xml
fase1/include/: Box.h  World.h
fase1/src/: engine.cpp  generator.cpp
fase1/src/Figures/: Torus.cpp
fase1/tests/test_files_phase_1/: test_1_3.xml
fase2/: .gitignore  CMakeLists.txt
fase2/include/: Plane.h  World.h
fase2/src/: engine.cpp
fase3/: .gitmodules
fase3/demos/: solarSystem.xml
fase3/include/: Patch.h  Torus.h  Tree.h  World.h
fase3/src/: CatmullRom.cpp  generator.cpp
fase3/src/Figures/: Cone.cpp
fase4/: CMakeLists.txt
fase4/demos/: donutWorld.xml  solarSystem.xml
fase4/include/: Box.h  CatmullRom.h  Cone.h  Patch.h  Tree.h
fase4/models/: box_2_3.3d  donut.3d  sphere_1_8_8.3d
fase4/src/: generator.cpp
fase4/src/Figures/: Box.cpp  Cone.cpp  Plane.cpp  Sphere.cpp
fase4/tests/test_files_phase_4/: test_4_8.xml
include/: Cone.h  Patch.h  Plane.h  Sphere.h  Torus.h  Tree.h  Vertex.h  World.h  all_headers.h
models/: background.3d  comet.3d  cone_1_2_4_3.3d  plane_2_3.3d  saturn.3d  saturnRings.3d  torus_2_1_10_10.3d
src/: engine.cpp  generator.cpp
src/Figures/: Box.cpp  Cone.cpp  Patch.cpp  Plane.cpp  Sphere.cpp  Torus.cpp
tests/: cone.xml
tests/test_files_phase_1/: test_1_5.xml
